# reactive_leds

./: .gitignore  Makefile  README.md  config.toml  controller.py  poetry.toml  pyproject.toml
firmware/: CMakeLists.txt  firmware.ino
firmware/src/: main.c
led_controller/: led_controller.ino
src/: args.py  audio.py  config.py  connection.py  main.py  plot.py  reactive_led.py
src/effects/: base.py  fire.py
white/: white.ino
