[tool.poetry]
name = "reactive-led"
version = "0.1.0"
description = ""
authors = ["Lyr <lyr-7d1h@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.4.6"
numpy = "^1.25.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
